@@ -1,4 +1,12 @@
 Version 0.5.1
 Update of datatabaseRequired
 
-Added comment field for InstitutionTerritory. 
+* Added comment field for InstitutionTerritory. 
+This allows to trace back the institution territory to source files. Simplifies debugging and tracing back where the information came from
+* Street address is recognized ignoring case. Previously streets such as "gedimino G. Vilnius" would not be parsed correctly
+
+* Did not correctly handle streets where there were more than 3 words. For example "Apolinaro Juozo Povilaičio g. 1, Vilnius"
+
+* Improved street range handling with letters. Previously, if a street range would be from 1 to 11, and user would query for "7B" (note the letter), the user query would not match this range. Now it does.
+
+* Improved address database data.
